# thoitietvietnam-core

./: .gitmodules  CMakeLists.txt  cppsrc.json
include/: appstate.h  env.h  locations.h  weather.h
src/: appstate.cpp  coreclient.cpp  locations.cpp  weather.cpp
test/: CMakeLists.txt
test/src/: testcoreclient.cpp
